# sophon_media

./: .gitignore  CMakeLists.txt  Readme.txt
bm_ffmpeg/: build_windows.sh  configure
bm_ffmpeg/doc/: muxers.texi
bm_ffmpeg/ffbuild/: libversion.sh
bm_ffmpeg/fftools/: ffplay.c
bm_ffmpeg/libavcodec/: bm_dec.c  bm_dec.h  (+4 more)
bm_gstreamer/: CMakeLists.txt  README.md  config.h.in  meson.build  meson_options.txt
bm_gstreamer/gst/: meson.build
bm_gstreamer/gst/bm_allocator/: CMakeLists.txt  gstbmallocator.c  gstbmallocator.h  meson.build
bm_gstreamer/gst/bmcodec/: CMakeLists.txt  gstbmcodeccaps.c  gstbmcodeccaps.h  gstbmdecoder.c  gstbmdecoder.h  gstbmenc.c  gstbmenc.h  gstbmh264enc.c  gstbmh264enc.h  gstbmh265enc.c  gstbmh265enc.h  gstbmjpegenc.c  gstbmjpegenc.h  meson.build  plugin.c
bm_gstreamer/gst/bmdpu/: CMakeLists.txt  gstbmdpu.c  gstbmdpu.h  meson.build  plugin.c
bm_gstreamer/gst/bmdwa/: CMakeLists.txt  gstbmdwa.c  gstbmdwa.h  meson.build  plugin.c
bm_gstreamer/gst/bmive/: CMakeLists.txt  gstbmive.c  gstbmive.h  meson.build  plugin.c
bm_gstreamer/gst/bmstitch2way/: CMakeLists.txt  gstbmstitch2way.c  gstbmstitch2way.h  meson.build  plugin.c
bm_gstreamer/gst/bmstitch4way/: CMakeLists.txt  gstbmstitch4way.c  gstbmstitch4way.h  meson.build  plugin.c
bm_gstreamer/gst/bmv4l2src/: CMakeLists.txt  gstbmv4l2src.c  gstbmv4l2src.h  gstv4l2allocator.c  gstv4l2allocator.h  gstv4l2bufferpool.c  gstv4l2bufferpool.h  gstv4l2object.c  gstv4l2object.h  meson.build  plugin.c  v4l2-utils.h  v4l2_calls.c
bm_gstreamer/gst/bmvpss/: CMakeLists.txt  gstbmvpss.c  gstbmvpss.h  meson.build  plugin.c
bm_gstreamer/samples/: meson.build
bm_gstreamer/samples/demo/: gst_vc_multi.cpp  run.sh
bm_gstreamer/samples/launch-scripts/: build_gst_ive.sh  build_gst_jpeg.sh  build_gst_transcode.sh  build_gst_vd.sh  build_gst_ve.sh  run-video-transcode.sh
bm_gstreamer/tests/: meson.build  test_all_plugins.sh
bm_gstreamer/tests/src/: test_gstbmdecode.cpp  test_gstbmencode.cpp  test_main.cpp
bm_weston/: meson.build
cmake/: FindFFmpeg.cmake  MW_linux_packages.cmake  aarch64-gnu.toolchain-1131.cmake  aarch64-gnu.toolchain-930.cmake  aarch64-gnu.toolchain.cmake
media_prebuild/: release_version.txt  sophon-media-soc-sophon-gstreamer_1.7.0_arm64.deb  sophon-media-soc-sophon-sample_1.7.0_arm64.deb  sophon_media.MD5
media_release/: .gitattributes  release_version.txt  release_version_1.8.0.txt  release_version_1.8.txt  sophon-media-soc-sophon-ffmpeg-dev_1.7.0_arm64.deb  sophon-media-soc-sophon-ffmpeg-dev_1.8.0_arm64.deb  sophon-media-soc-sophon-ffmpeg_1.7.0_arm64.deb  sophon-media-soc-sophon-ffmpeg_1.8.0_arm64.deb  sophon-media-soc-sophon-gstreamer-dev_1.7.0_arm64.deb  sophon-media-soc-sophon-gstreamer-dev_1.8.0_arm64.deb  sophon-media-soc-sophon-gstreamer_1.7.0_arm64.deb  sophon-media-soc-sophon-gstreamer_1.8.0_arm64.deb  sophon-media-soc-sophon-opencv-dev_1.7.0_arm64.deb  sophon-media-soc-sophon-opencv-dev_1.8.0_arm64.deb  sophon-media-soc-sophon-opencv_1.7.0_arm64.deb  sophon-media-soc-sophon-opencv_1.8.0_arm64.deb  sophon-media-soc-sophon-sample_1.7.0_arm64.deb  sophon-media-soc-sophon-sample_1.8.0_arm64.deb  sophon_media.MD5  sophon_media_1.8.0.MD5  sophon_media_1.8.MD5
samples/: CMakeLists.txt
samples/bm_api_transcode/: CMakeLists.template  CMakeLists.txt  codec_process.h  enc_process.c  osal.c  queue.c  test_bm_video_transcode.c
samples/ff_bmcv_transcode/: CMakeLists.txt  Makefile  Readme.txt  ff_avframe_convert.cpp  ff_avframe_convert.h  ff_video_decode.cpp  ff_video_decode.h  ff_video_encode.cpp  test_ff_video_transcode.cpp
samples/ff_bmjpeg/: CMakeLists.template  CMakeLists.txt  ff_bmjpeg.cpp
samples/ff_bmjpeg_dec_recycle/: CMakeLists.template  CMakeLists.txt  ff_bmjpeg_dec_recycle.cpp
samples/ff_hw_bmcv_transcode/: CMakeLists.template  CMakeLists.txt  Readme.txt  ff_avframe_convert.cpp  ff_avframe_convert.h  ff_video_decode.cpp  ff_video_decode.h  ff_video_encode.cpp  ff_video_encode.h  test_ff_video_transcode.cpp
samples/ff_overlay_transcode/: CMakeLists.template  CMakeLists.txt  Readme.txt  ff_video_decode.cpp  ff_video_decode.h  ff_video_encode.cpp  ff_video_encode.h  ff_video_filter.cpp  ff_video_filter.h  test_ff_video_transcode.cpp
samples/ff_resize_transcode/: CMakeLists.template  CMakeLists.txt  ff_avframe_convert.cpp  ff_avframe_convert.h  ff_video_decode.cpp  ff_video_encode.cpp  ff_video_encode.h  test_ff_video_transcode.cpp
samples/ff_scale_transcode/: CMakeLists.template  CMakeLists.txt  Readme.txt  ff_video_decode.cpp  ff_video_decode.h  ff_video_encode.cpp  ff_video_filter.cpp  ff_video_filter.h  test_ff_video_transcode.cpp
samples/ff_sns_xcode/: CMakeLists.template  CMakeLists.txt  ff_avframe_convert.cpp  ff_avframe_convert.h  ff_sns_decode.hpp  ff_sns_encode.hpp  ff_sns_xcode.cpp
samples/ff_video_decode/: CMakeLists.template  CMakeLists.txt  ff_video_decode.cpp  ff_video_decode.h  test_ff_video_decode.cpp
samples/ff_video_encode/: CMakeLists.template  CMakeLists.txt  ff_video_encode.cpp
samples/ff_video_xcode/: CMakeLists.template  CMakeLists.txt  README.md  ff_video_decode.hpp  ff_video_encode.hpp  ff_video_xcode.cpp
samples/gst/gst_bm_bmcv_transcode/: CMakeLists.template  CMakeLists.txt  gst_bmcv_transcode.cpp
samples/gst/gst_bm_transcode/: CMakeLists.template  CMakeLists.txt  gst_transcode.cpp
samples/gst/gst_bm_v4l2xcode/: CMakeLists.template  CMakeLists.txt  gst_xcode.cpp
samples/gst/gst_bm_vcmulti/: CMakeLists.template  CMakeLists.txt  gst_vc_multi.cpp
samples/ocv_jpubasic/: CMakeLists.template  CMakeLists.txt  Makefile  jpubasic.cpp
samples/ocv_jpumulti/: CMakeLists.template  CMakeLists.txt  Makefile  jpumulti.cpp
samples/ocv_vidbasic/: CMakeLists.template  CMakeLists.txt  Makefile  vidbasic.cpp
samples/ocv_video_xcode/: CMakeLists.template  CMakeLists.txt  Makefile  ocv_video_xcode.cpp
samples/ocv_vidmulti/: CMakeLists.template  CMakeLists.txt  Makefile  vidmulti.cpp
samples/ocv_vidsensor/: CMakeLists.template  CMakeLists.txt  Makefile  vidsensor.cpp
stream/: 1920x1080.yuv  jpubasic_benchmark.sh  sky_640x480.yuv
(+291 files in other folders)
