option('bm_allocator', type : 'feature', value : 'auto', description : 'hardware accelerated video en/decoding elements using the SOPHGO')
option('bmcodec', type : 'feature', value : 'auto', description : 'SOPHGO codec plugin')
option('bmvpss', type : 'feature', value : 'auto', description : 'SOPHGO vpss plugin')
option('bmv4l2src', type : 'feature', value : 'auto', description : 'SOPHGO v4l2src plugin')
option('bmive', type : 'feature', value : 'auto', description : 'SOPHGO ive plugin')

option('package-name', type : 'string', yield : true,
       description : 'package name to use in plugins')

option('package-origin', type : 'string', value : 'Unknown package origin', yield : true,
       description : 'package origin URL to use in plugins')
